--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="users_picture">User\'s picture</string>
     <string name="android_mascot">android mascot</string>
     <string name="volume_button_image">volume button image</string>
+    <string name="onboarding_view_pager_text_1">Осень 2021 г., СПбГУ</string>
+    <string name="onboarding_view_pager_text_2">Мы изучаем разработку под Android</string>
+    <string name="onboarding_view_pager_text_3">Добро пожаловать в команду</string>
+    <string name="onboarding_sign_in_button_text">Войти</string>
+    <string name="onboarding_sign_up_button_text">Зарегистрироваться</string>
 </resources>
