--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="bottom_navigation_title_likes">Лайки</string>
     <string name="bottom_navigation_title_bookmarks">Закладки</string>
     <string name="bottom_navigation_title_profile">Профиль</string>
+    <string name="sign_in_sign_in_button_text">Войти</string>
+    <string name="back_button">back_button</string>
+    <string name="sign_in">Sign in</string>
+
 </resources>
