--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,13 @@
     <string name="sign_in_sign_in_button_text">Войти</string>
     <string name="back_button">back_button</string>
     <string name="sign_in">Sign in</string>
+    <string name="sign_in_email_text_layout_hint">Почта</string>
+    <string name="sign_in_password_text_layout_hint">Пароль</string>
+    <string name="sign_up_club_rules">правила клуба</string>
+    <string name="sign_up_terms_and_conditions_template">Я принимаю %s</string>
+    <string name="sign_in_back_alert_dialog_text">Данные пропадут</string>
+    <string name="sign_in_back_alert_dialog_negative_text">Отменить</string>
+    <string name="sign_in_back_alert_dialog_positive_text">Подтвердить</string>
+    <string name="mkn_logo">mkn_logo</string>
 
 </resources>
