--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,9 +21,17 @@
     <string name="sign_in_password_text_layout_hint">Пароль</string>
     <string name="sign_up_club_rules">правила клуба</string>
     <string name="sign_up_terms_and_conditions_template">Я принимаю %s</string>
-    <string name="sign_in_back_alert_dialog_text">Данные пропадут</string>
-    <string name="sign_in_back_alert_dialog_negative_text">Отменить</string>
-    <string name="sign_in_back_alert_dialog_positive_text">Подтвердить</string>
+    <string name="common_back_alert_dialog_text">Данные пропадут</string>
+    <string name="common_back_alert_dialog_negative_text">Отменить</string>
+    <string name="common_back_alert_dialog_positive_text">Подтвердить</string>
     <string name="mkn_logo">mkn_logo</string>
+    <string name="sign_up_firstname_text_layout_hint">Имя</string>
+    <string name="sign_up_lastname_text_layout_hint">Фамилия</string>
+    <string name="sign_up_nickname_text_layout_hint">Псевдоним</string>
+    <string name="sign_up_under_nickname_text">То, что увидят другие пользователи</string>
+    <string name="sign_up_under_email_text">Будет видно только вам</string>
+    <string name="sign_up_sign_up_button_text">Зарегистрироваться</string>
+    <string name="sign_up_password_text_layout_hint">Пароль</string>
+    <string name="sign_up_email_text_layout_hint">Почта</string>
 
 </resources>
