add corner case care in user lists and fix progress bar existence in error case

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,6 @@
     <string name="verification_code_submitted_text">Код подтверждения выслан на почту</string>
     <string name="verify_code">Подтвердить код</string>
     <string name="go_to_mail">Перейти в почту</string>
+    <string name="empty_list_response">List is empty :(</string>
 
 </resources>
