--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,7 @@
     <string name="empty_list_response">List is empty :(</string>
     <string name="news_toolbar_title">Мобильная разработка</string>
     <string name="news_add_new_post_content">Добавить пост</string>
+    <string name="profile_logout_button_text">Log out</string>
+    <string name="common_general_error_text">Something went wrong :(</string>
 
 </resources>
