--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,5 +46,7 @@
     <string name="profile_logout_button_text">Log out</string>
     <string name="common_general_error_text">Something went wrong :(</string>
     <string name="common_counter_prefix">+%d</string>
+    <string name="search_people">Search people</string>
+    <string name="search_user_list">Search</string>
 
 </resources>
